--- a/style.css
+++ b/style.css
@@ -79,12 +79,9 @@ h6 {
     font-weight: bold;
 }
 
-.icons {
+img {
     display: inline-block;
     position: relative;
-}
-
-.icons img {
     padding-right: 2px;
     padding-left: 5px;
 }
